add documentation for main screen

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -13,4 +13,6 @@
     <string name="windSpeed">Velocidad del Viento</string>
     <string name="minTemp">Min</string>
     <string name="maxTemp">Max</string>
+    <string name="city_not_found">Ciudad no encontrada</string>
+    <string name="no_internet_connection">No hay conexión a internet</string>
 </resources>
